# yan85tools

./: Cargo.toml
cfg/: yan85.toml
src/: assembler.rs  decoder.rs  disassembler.rs  errors.rs  executor.rs  isa.rs  kernel.rs  machine.rs  main.rs  memory.rs  reg_file.rs  yan.rs
src/debugger/: command.rs  mod.rs  style.rs  ui.rs  watch.rs
tests/: get_flag.yan85  jmp.yan85  stk.yan85  test.yan85
