[package]
name = "yantools"
version = "0.1.0"
edition = "2024"

[dependencies]
array-init = "2.1.0"
bimap = "0.6.3"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
lazy_static = "1.5.0"
palette = "0.7.6"
ratatui = "0.30.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.9.2"
